refactor(workflow): 优化工作流引擎代码结构和依赖管理
- 移除不必要的 Collections 导入并使用 List.of() 替代空列表
- 在 LoopWorkFlow 中改进循环参数处理和节点状态加载逻辑
- 重构 LLMNodeHandler 中工具提供者解析的调用顺序
- 简化 LoopNodeHandler 中的迭代执行逻辑
- 更新 StartNodeHandler 中历史记录访问方式
- 调整代码格式和文档注释结构